--- a/components/About/About.scss
+++ b/components/About/About.scss
@@ -1,6 +1,41 @@
-@import '../vars.scss';
+@import "../vars.scss";
 
 .About {
   height: 100%;
   background-color: $main-background;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  .UserFoto {
+    padding: 80px 0 50px;
+
+    img {
+      border-radius: 50%;
+      border: 4px solid hsl(0, 0%, 78%);
+    }
+  }
+
+  .About-Text {
+    text-align: center;
+
+    h1 {
+      margin: 5px 0;
+    }
+
+    .About-MainText {
+      margin-top: 60px;
+      padding: 0 80px;
+    }
+  }
+
+  .MediaLinks {
+    padding: 40px 0;
+    text-align: center;
+    p, img {
+      margin: 10px 0;
+    }
+  }
+
 }
