add carousel for projects

--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -1,6 +1,10 @@
-@import '../vars.scss';
+@import "../vars.scss";
 
 .Projects {
-  height: 100%;
+  height: 100%;  
   background-color: $main-background;
+
+  
+
+  
 }
