--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -1,25 +1,51 @@
 @import "../vars.scss";
 
 .Projects {
-  height: 100%;  
+  height: 100%;
   background-color: $main-background;
 
   .Projects-CarouselWrap {
-    height: 600px;
+    height: 400px;
   }
 
-  .carousel, .carousel-inner, .carousel-item {
+  .carousel,
+  .carousel-inner,
+  .carousel-item {
     height: 100%;
   }
 
-  a, img {
-    height: 70%;
+  a,
+  img {
+    height: 100%;
   }
 
   .carousel-caption {
     position: initial;
     color: black;
+    height: 50%;
   }
 
+  .carousel-indicators li {
+    background-color: black;
+  }
+
+  .carousel-control-next,
+  .carousel-control-prev {    
+    filter: invert(100%);
+  }
+
+  a, h3 {
+    color: black;
+    text-decoration: none;    
+  }
+  h6 {
+    font-style: italic;
+    margin-bottom: 20px;
+  }
+
+  .GitHubImg {
+    margin-top: 50px;
+    height: initial;
+  }
   
 }
