add layout for about

--- a/components/AboutMe/AboutMe.scss
+++ b/components/AboutMe/AboutMe.scss
@@ -7,6 +7,15 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  padding: 50px 50px;
+
+  h1 {
+    margin-bottom: 50px;
+  }
+
+  th {
+    padding-right: 20px;
+  }
 
   
 
