--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -11,7 +11,15 @@
   .carousel,
   .carousel-inner,
   .carousel-item {
-    height: 100%;
+    height: 100%;    
+  }
+
+  ol {
+    margin: 0;
+  }
+
+  .carousel {    
+    margin-bottom: 50px;
   }
 
   .Projects-CarouselWrap a,
@@ -49,6 +57,12 @@
 
   .Description {
     position: relative;
+    padding-top: 50px;    
+  }
+
+  .carousel-caption {
+    height: 100%;
+    padding: 0 20px;
   }
 
   .RightArrow {
