--- a/components/main.scss
+++ b/components/main.scss
@@ -25,4 +25,8 @@ h1, h2, h3, h4, h5, h6, p {
   grid-template-columns: minmax(0, 3fr) minmax(0, 1fr) minmax(0, 5fr);  
   grid-column-gap: 5px;
   height: 100%;
+
+  @media screen and (max-width: 1450px) {
+    grid-template-columns: minmax(0, 1fr); 
+  }
 }
