--- a/components/About/About.scss
+++ b/components/About/About.scss
@@ -8,6 +8,12 @@
   justify-content: flex-start;
   align-items: center;
 
+  a {
+    text-decoration: none;
+    color: initial;
+    cursor: initial;
+  }
+
   .UserFoto {
     padding: 80px 0 50px;    
   }
