--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -7,7 +7,15 @@
   .Projects-CarouselWrap {
     height: 600px;
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 1450px) {
+      height: 800px;
+    }
+
+    @media screen and (max-width: 1200px) {
+      height: 620px;
+    }
+
+    @media screen and (max-width: 800px) {
       height: 400px;
     }
 
