--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -1,11 +1,14 @@
 @import "../vars.scss";
 
 .Projects {
-  height: 100%;
   background-color: $main-background;
 
   .Projects-CarouselWrap {
     height: 600px;
+
+    & img {
+      height: 100%;
+    }
 
     @media screen and (max-width: 1450px) {
       height: 800px;
@@ -24,77 +27,37 @@
     }
   }
 
-  .carousel,
-  .carousel-inner,
-  .carousel-item {
-    height: 100%;
-  }
-
-  ol {
-    margin: 0;
-  }
-
-  .carousel {
-    margin-bottom: 50px;
-  }
-
-  .Projects-CarouselWrap a,
-  img {
-    height: 100%;
-  }
-
-  .carousel-caption {
-    position: initial;
-    color: black;
-    height: 50%;
-  }
-
-  .carousel-indicators li {
-    background-color: black;
-  }
-
-  .carousel-control-prev-icon {
-    width: 50px;
-    height: 50px;
-    background-image: url(/static/left_arrow.png);
-  }
-
-  .carousel-control-next-icon {
-    width: 50px;
-    height: 50px;
-    background-image: url(/static/right_arrow.png);
-  }
-
-  .carousel-control-next,
-  .carousel-control-prev {
-    bottom: 25%;
-    top: initial;
-  }
-
   .Description {
     position: relative;
-    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
-  .carousel-caption {
-    height: 100%;
-    padding: 0 20px;
-  }
+  .Arrows {
+    margin: 20px 0;
+    text-align: center;
+    z-index: 1;
 
-  .RightArrow {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translate(0, -50%);
-    margin-right: 10px;
-  }
+    .RightArrow {
+      display: inline-block;
+      opacity: 0.8;
+      z-index: 10;
+      &:hover {
+        opacity: 1;
+      }
+    }
 
-  .LeftArrow {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(0, -50%);
-    margin-left: 10px;
+    .LeftArrow {
+      margin-right: 10px;
+      display: inline-block;
+      opacity: 0.8;
+      z-index: 10;
+      &:hover {
+        opacity: 1;
+      }
+    }
   }
 
   button {
@@ -102,24 +65,13 @@
     border: none;
     padding: 0;
     border-radius: 50%;
-
-    @media screen and (max-width: 700px) {
-      opacity: 0.4;
-
-      img {
-        height: 50px;
-      }
-    }
-  }
-
-  .sr-only {
-    background-image: url();
   }
 
   a,
   h3 {
     color: black;
     text-decoration: none;
+    text-align: center;
   }
   h6 {
     font-style: italic;
@@ -130,8 +82,13 @@
     margin-top: 20px;
   }
 
+  p {
+    text-align: center;
+  }
+
   .GitHubImg {
     margin: 50px 0;
+    text-align: center;
 
     & img {
       height: initial;
