--- a/components/About/About.scss
+++ b/components/About/About.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: center;  
 
   a {
     text-decoration: none;
@@ -27,6 +27,7 @@
     .About-MainText {
       margin-top: 60px;
       padding: 0 80px;
+      max-width: 550px;
     }
   }
 
