--- a/components/Menu/Menu.scss
+++ b/components/Menu/Menu.scss
@@ -1,12 +1,18 @@
 @import "../vars.scss";
 
 .Menu {
-  height: 30%;
+  height: 100%;
   display: grid;
   grid-template-rows: 150px 150px;
-  grid-row-gap: 5px;  
+  grid-row-gap: 5px; 
+  align-content: start;
+  justify-content: center; 
 
-  .Item {
+  @media screen and (max-width: 1450px) {
+    align-content: center;
+  }
+
+  .Item {    
     background-color: $main-background;
     border-radius: 5px;
     display: flex;
@@ -14,6 +20,7 @@
     justify-content: center;
     align-items: center;
     border-bottom: 2px solid #fff;
+    min-width: 180px;
 
     &:hover {
       background-color: $menu_hover;   
