--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -1,18 +1,26 @@
 @import "../vars.scss";
 
 .Projects {
-  background-color: $main-background;  
+  background-color: $main-background; 
 
-  .Projects-CarouselWrap {
-    height: 600px;
-    margin: 0 10px;
+  // .react-swipe-container {
+  //   &>div:first-child {
+
+  //   }
+  // }
+
+  // .CarouselItem {          
+  // }
+
+  .CarouselItem-ImgWrap {
+    height: 600px;            
 
     & img {
-      height: 100%;
+      height: 100%;            
     }
 
     @media screen and (max-width: 1450px) {
-      height: 800px;
+      height: 800px;      
     }
 
     @media screen and (max-width: 1200px) {
@@ -33,13 +41,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; 
   }
 
   .Arrows {
     margin: 20px 0;
     text-align: center;
-    z-index: 1;
+    z-index: 1;     
 
     .RightArrow {
       display: inline-block;
