--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -16,23 +16,23 @@
     height: 600px;            
 
     & img {
-      height: 100%;            
+      height: 100%;
     }
 
     @media screen and (max-width: 1450px) {
-      height: 800px;      
+      max-height: 800px;      
     }
 
     @media screen and (max-width: 1200px) {
-      height: 620px;
+      max-height: 620px;
     }
 
     @media screen and (max-width: 800px) {
-      height: 400px;
+      max-height: 400px;
     }
 
     @media screen and (max-width: 400px) {
-      height: 300px;
+      max-height: 300px;
     }
   }
 
