--- a/components/About/About.scss
+++ b/components/About/About.scss
@@ -14,7 +14,13 @@
   }
 
   .UserFoto {
+    height: 500px;    
     padding: 80px 0 50px;    
+
+    img {
+      height: 100%;      
+      border-radius: 10%;
+    }
   }
 
   .About-Text {
