--- a/components/AboutMe/AboutMe.scss
+++ b/components/AboutMe/AboutMe.scss
@@ -9,6 +9,11 @@
   align-items: center;
   padding: 50px 50px;
 
+  table {
+    max-width: 500px;
+    margin-bottom: 500px;
+  }
+
   h1 {
     margin-bottom: 50px;
   }
