--- a/components/Projects/Projects.scss
+++ b/components/Projects/Projects.scss
@@ -13,27 +13,27 @@
   // }
 
   .CarouselItem-ImgWrap {
-    height: 600px;            
+    // height: 600px;            
 
     & img {
-      height: 100%;
+      max-height: 100%;
     }
 
-    @media screen and (max-width: 1450px) {
-      max-height: 800px;      
-    }
+    // @media screen and (max-width: 1450px) {
+    //   max-height: 800px;      
+    // }
 
-    @media screen and (max-width: 1200px) {
-      max-height: 620px;
-    }
+    // @media screen and (max-width: 1200px) {
+    //   max-height: 620px;
+    // }
 
-    @media screen and (max-width: 800px) {
-      max-height: 400px;
-    }
+    // @media screen and (max-width: 800px) {
+    //   max-height: 400px;
+    // }
 
-    @media screen and (max-width: 400px) {
-      max-height: 300px;
-    }
+    // @media screen and (max-width: 400px) {
+    //   max-height: 300px;
+    // }
   }
 
   .Description {
