--- a/components/AboutMe/AboutMe.scss
+++ b/components/AboutMe/AboutMe.scss
@@ -1,32 +1,28 @@
 @import "../vars.scss";
 
 .AboutMe {
-  height: 100%;
-  background-color: $main-background;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 50px 50px;
+    height: 100%;
+    background-color: $main-background;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 50px 50px;
 
-  table {
-    max-width: 500px;
-    margin-bottom: 500px;
-  }
+    &__Info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 25px;
+        margin-top: 25px;
 
-  h1 {
-    margin-bottom: 50px;
-  }
+        &__TitleAria {
+            font-weight: bold;
+            justify-self: end;
+        }
 
-  th {
-    padding: 10px 0;
-    padding-right: 20px;
-  }
+        &__DescriptionAria {
+            justify-self: start;
+        }
 
-  td {
-    padding: 10px 0;
-  }
-
-  
-
+    }
 }
