--- a/src/styles/font.less
+++ b/src/styles/font.less
@@ -28,21 +28,11 @@
 
 .f_h1 {
     .create-font(
-        @font-size: 68px;
-        @line-height: 70px;
+        @font-size: 40px;
+        @line-height: 48px;
     );
 
-    text-transform: uppercase;
-
-    @media @laptop {
-        font-size: 50px;
-        line-height: 60px;
-    }
-
-    @media @mobile {
-        font-size: 40px;
-        line-height: 45px;
-    }
+    font-weight: 500;
 }
 
 .f_h2 {
