--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -1,3 +1,5 @@
+@import (reference) '~styles/colors';
+
 * {
     box-sizing: border-box;
 }
@@ -8,14 +10,23 @@
 }
 
 a {
+    color: initial;
     text-decoration: none;
+
+    &:active,
+    &:focus,
+    &:hover {
+        color: initial;
+    }
 }
 
 body {
+    color: @main;
     font-family: 'Noto Sans SC', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     height: 100vh;
+    line-height: 24px;
     margin: 0;
     overflow: hidden;
 }
