--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -1,9 +1,7 @@
 @black-80: fade(@black, 80%);
 @black: #000000;
 
-@blue: #4e26fd;
-@blue-1: #290ab3;
-@blue-2: #6643fd;
+@blue: #11419b;
 
 @gray: #59595f;
 @gray-1: #b2b2b2;
