--- a/src/pages/Main/components/Content/index.less
+++ b/src/pages/Main/components/Content/index.less
@@ -1,3 +1,50 @@
-.main-page-content {
+@import (reference) '~styles/colors';
 
+.main-page-content {
+    &__tab {
+        text-align: center;
+    }
+
+    &__tab-icon {
+        height: 32px;
+        object-fit: cover;
+        width: 32px;
+    }
+
+    &__tabs-button {
+        align-items: center;
+        border-bottom: 2px solid @white;
+        border-radius: 0;
+        cursor: pointer;
+        display: flex;
+        height: 150px;
+        justify-content: center;
+        position: relative;
+        width: 150px;
+
+        &_active {
+            border-bottom-color: @blue;
+        }
+
+        &:hover {
+            background-color: @blue;
+            border-bottom-color: transparent;
+            border-radius: 5px;
+
+            .main-page-content__tab-description {
+                color: @white;
+                font-size: 20px;
+            }
+
+            .main-page-content__tab-icon {
+                display: none;
+            }
+        }
+    }
+
+    &__tabs-container {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
 }
