--- a/src/pages/Main/components/Content/Projects/ProjectsSlider/SliderMainSlide/index.less
+++ b/src/pages/Main/components/Content/Projects/ProjectsSlider/SliderMainSlide/index.less
@@ -1,7 +1,7 @@
 @import (reference) '~styles/adaptive';
 @import (reference) '~styles/colors';
 
-.slider-main-slide {
+.project-slider-slide {
     display: flex;
     flex: 1;
 
