--- a/src/pages/Main/components/Content/Projects/ProjectsSlider/index.less
+++ b/src/pages/Main/components/Content/Projects/ProjectsSlider/index.less
@@ -1,7 +1,7 @@
 @import (reference) '~styles/colors';
 @import (reference) '~styles/flex';
 
-.slider-main {
+.project-slider {
     height: 100%;
     position: relative;
 
