--- a/src/pages/Main/components/Content/Projects/Slider/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/index.less
@@ -6,10 +6,10 @@
     position: relative;
 
     &__controls {
-        bottom: 0;
         display: flex;
         left: 50%;
         position: absolute;
+        top: 0;
         transform: translateX(-50%);
         z-index: 9;
     }
