add additional info

--- a/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
@@ -8,6 +8,11 @@
     flex-direction: column;
     text-align: center;
 
+    &__additional-info {
+        margin-top: 10px;
+        white-space: pre;
+    }
+
     &__description {
         margin-top: 5px;
 
