--- a/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
@@ -6,6 +6,7 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    position: relative;
     text-align: center;
 
     &__additional-info {
@@ -33,6 +34,8 @@
     &__git-container {
         display: inline-block;
         margin-top: 50px;
+        position: relative;
+        z-index: 1;
     }
 
     &__git-icon {
@@ -49,5 +52,13 @@
         height: 825px;
         object-fit: cover;
         width: 1110px;
+    }
+
+    &__link {
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
     }
 }
