--- a/src/pages/Main/components/Content/Projects/Slider/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/index.less
@@ -9,7 +9,7 @@
         display: flex;
         left: 50%;
         position: absolute;
-        top: 0;
+        top: -45px;
         transform: translateX(-50%);
         z-index: 9;
     }
