--- a/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
@@ -49,9 +49,8 @@
     }
 
     &__image {
-        height: 825px;
-        object-fit: cover;
-        width: 1110px;
+        max-width: 1110px;
+        width: 100%;
     }
 
     &__link {
