--- a/src/pages/Main/components/Content/About/index.less
+++ b/src/pages/Main/components/Content/About/index.less
@@ -1,5 +1,17 @@
 @import (reference) '~styles/colors';
 
 .main-page-content-about {
+    margin-top: 50px;
 
+    &__item {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 25px;
+        margin-top: 25px;
+    }
+
+    &__item-title {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
