--- a/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
@@ -6,7 +6,6 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    position: relative;
     text-align: center;
 
     &__additional-info {
@@ -38,14 +37,15 @@
         z-index: 1;
     }
 
-    &__git-icon {
+    &__header-container {
+        margin-top: 50px;
+    }
+
+    &__icon {
+        border-radius: 50%;
         height: 64px;
         object-fit: cover;
         width: 64px;
-    }
-
-    &__header-container {
-        margin-top: 50px;
     }
 
     &__image {
@@ -59,5 +59,9 @@
         position: absolute;
         right: 0;
         top: 0;
+    }
+
+    &__project-link-container {
+        margin-top: 50px;
     }
 }
