add link to project

--- a/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
@@ -37,15 +37,14 @@
         z-index: 1;
     }
 
-    &__header-container {
-        margin-top: 50px;
-    }
-
-    &__icon {
-        border-radius: 50%;
+    &__git-icon {
         height: 64px;
         object-fit: cover;
         width: 64px;
+    }
+
+    &__header-container {
+        margin-top: 50px;
     }
 
     &__image {
@@ -63,5 +62,12 @@
 
     &__project-link-container {
         margin-top: 50px;
+    }
+
+    &__project-icon {
+        border-radius: 50%;
+        height: 150px;
+        object-fit: cover;
+        width: 150px;
     }
 }
