--- a/src/styles/font.less
+++ b/src/styles/font.less
@@ -53,7 +53,9 @@
 }
 
 .f_h4 {
-    .create-font(@font-size: 24px; @line-height: 24px;);
+    .create-font(@font-size: 50px; @line-height: 56px;);
+
+    font-weight: 400;
 }
 
 .f_h5 {
