--- a/src/styles/font.less
+++ b/src/styles/font.less
@@ -1,15 +1,9 @@
 @import (reference) '~styles/adaptive';
 @import (reference) '~styles/colors';
 
-@font-face {
-    font-family: 'Noto Sans SC';
-    font-weight: 400;
-    src: url('/src/fonts/Chivo-Regular.ttf');
-}
-
 @default: {
     @color: @black;
-    @font-family: 'Noto Sans SC', sans-serif;
+    @font-family: 'Areal', sans-serif;
     @font-size: 16px;
     @line-height: 26px;
 }
