add lang select

--- a/src/common/components/CustomSelect/index.less
+++ b/src/common/components/CustomSelect/index.less
@@ -14,7 +14,7 @@
             flex: 1;
 
             &:hover {
-                border-color: @blue-1;
+                border-color: @blue;
             }
 
             &--is-focused {
