--- a/src/pages/Main/components/Header/index.less
+++ b/src/pages/Main/components/Header/index.less
@@ -26,6 +26,11 @@
         margin-top: 50px;
     }
 
+    &__lang-select-container {
+        margin-top: 50px;
+        min-width: 80px;
+    }
+
     &__photo {
         border-radius: 25px;
         height: 370px;
