add translation for concrete project

--- a/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/Slide/index.less
@@ -8,9 +8,8 @@
     flex-direction: column;
     text-align: center;
 
-    &__additional-info {
+    &__additional-info-item {
         margin-top: 10px;
-        white-space: pre;
     }
 
     &__description {
