--- a/src/pages/Main/components/Content/Projects/Slider/index.less
+++ b/src/pages/Main/components/Content/Projects/Slider/index.less
@@ -1,3 +1,4 @@
+@import (reference) '~styles/adaptive';
 @import (reference) '~styles/colors';
 @import (reference) '~styles/flex';
 
@@ -35,6 +36,11 @@
         cursor: pointer;
         margin: 0 20px;
         padding: 20px;
+
+        @media @mobile {
+            margin: 0 5px;
+            padding: 10px;
+        }
 
         &:hover {
             background-color: @blue;
