--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -1,12 +1,12 @@
-@black-80: fade(@black, 80%);
 @black: #000000;
+@black-80: fade(@black, 80%);
 
 @blue: #11419b;
 
+@dark: #212529;
+
 @gray: #59595f;
 @gray-1: #b2b2b2;
-
-@main: #212529;
 
 @red: #ff0000;
 
