--- a/src/styles/normalize.less
+++ b/src/styles/normalize.less
@@ -4,32 +4,18 @@
     box-sizing: border-box;
 }
 
-#root {
-    height: 100%;
-    overflow: auto;
-    width: 100%;
-}
-
 a {
-    color: initial;
+    color: unset;
     text-decoration: none;
-
-    &:active,
-    &:focus,
-    &:hover {
-        color: initial;
-    }
 }
 
 body {
-    color: @main;
+    color: @dark;
     font-family: 'Noto Sans SC', sans-serif;
     font-size: 16px;
     font-weight: 400;
-    height: 100vh;
     line-height: 24px;
     margin: 0;
-    overflow: hidden;
 }
 
 button {
