--- a/src/styles/tags.less
+++ b/src/styles/tags.less
@@ -1,5 +1,21 @@
 @import (reference) '~styles/font';
 
+#root {
+    height: 100%;
+}
+
+body {
+    .f_default();
+
+    font-family: 'NotoSans', sans-serif;
+    height: 100%;
+}
+
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
 h1 {
     .f_h1();
 }
@@ -22,8 +38,4 @@ h5 {
 
 h6 {
     .f_h6();
-}
-
-p {
-    .f_p();
 }
