--- a/src/main/Home/Header/index.less
+++ b/src/main/Home/Header/index.less
@@ -1,13 +1,9 @@
-.main-page-header {
+.home-page-header {
     align-items: center;
     display: flex;
     flex: 1;
     flex-direction: column;
     text-align: center;
-
-    &__contacts-item {
-        margin-top: 10px;
-    }
 
     &__contacts-section {
         margin-top: 40px;
@@ -35,16 +31,6 @@
         border-radius: 25px;
         height: 370px;
         width: 270px;
-    }
-
-    &__socials-icon {
-        height: 64px;
-        object-fit: cover;
-        width: 64px;
-    }
-
-    &__socials-item {
-        margin-top: 10px;
     }
 
     &__socials-section {
