--- a/src/main/Home/Content/index.less
+++ b/src/main/Home/Content/index.less
@@ -1,14 +1,14 @@
 @import (reference) '~styles/colors';
 
-.main-page-content {
+.home-page-content {
     &__tab {
         text-align: center;
     }
 
     &__tab-icon {
-        height: 32px;
-        object-fit: cover;
-        width: 32px;
+        color: @gray;
+        height: 64px;
+        width: 64px;
     }
 
     &__tabs-button {
@@ -31,12 +31,12 @@
             border-bottom-color: transparent;
             border-radius: 5px;
 
-            .main-page-content__tab-description {
+            .home-page-content__tab-description {
                 color: @white;
                 font-size: 20px;
             }
 
-            .main-page-content__tab-icon {
+            .home-page-content__tab-icon {
                 display: none;
             }
         }
