add support for description title

--- a/src/main/Home/Content/TabsContent/About/Item/index.less
+++ b/src/main/Home/Content/TabsContent/About/Item/index.less
@@ -12,6 +12,10 @@
         }
     }
 
+    &__description-title {
+        font-weight: 700;
+    }
+
     &__title-container {
         font-weight: 700;
         text-align: right;
