fix icons + text

--- a/src/main/Home/Header/index.less
+++ b/src/main/Home/Header/index.less
@@ -17,13 +17,8 @@
     }
 
     &__header-description {
+        font-weight: 700;
         margin-top: 10px;
-    }
-
-    &__header-description-additional {
-        .f_small();
-
-        font-style: italic;
     }
 
     &__header-section {
