add last update badge

--- a/src/main/Home/Content/TabsContent/Projects/Slider/Slide/index.less
+++ b/src/main/Home/Content/TabsContent/Projects/Slider/Slide/index.less
@@ -49,12 +49,16 @@
         width: 100%;
     }
 
-    &__link {
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
+    &__badge-container {
+        margin-top: 15px;
+    }
+
+    &__badge-update {
+        background-color: @green;
+        border-radius: 16px;
+        color: @white;
+        font-weight: 700;
+        padding: 10px 20px;
     }
 
     &__project-link-container {
