refactor slider + layout

--- a/src/main/Home/Content/TabsContent/Projects/Slider/index.less
+++ b/src/main/Home/Content/TabsContent/Projects/Slider/index.less
@@ -2,4 +2,9 @@
     &__slider-container {
         margin-top: 50px;
     }
+
+    &__slide-container {
+        display: flex;
+        justify-content: center;
+    }
 }
