--- a/src/main/Home/Content/TabsContent/Projects/Slider/Slide/index.less
+++ b/src/main/Home/Content/TabsContent/Projects/Slider/Slide/index.less
@@ -2,14 +2,26 @@
 @import (reference) '~styles/colors';
 
 .project-slider-slide {
-    align-items: center;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+    max-width: 1024px;
     text-align: center;
+    width: 100%;
 
     &__additional-info-item {
         margin-top: 10px;
+    }
+
+    &__badge-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+    }
+
+    &__badge-update {
+        background-color: @green;
+        border-radius: 16px;
+        color: @white;
+        font-weight: 700;
+        padding: 10px 20px;
     }
 
     &__description {
@@ -45,20 +57,21 @@
     }
 
     &__image {
-        max-width: 1110px;
         width: 100%;
     }
 
-    &__badge-container {
-        margin-top: 15px;
+    &__image-container {
+        position: relative;
     }
 
-    &__badge-update {
-        background-color: @green;
-        border-radius: 16px;
-        color: @white;
-        font-weight: 700;
-        padding: 10px 20px;
+    &__link {
+        bottom: 0;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 100%;
     }
 
     &__project-link-container {
