--- a/src/main/Home/Content/TabsContent/Projects/Slider/index.less
+++ b/src/main/Home/Content/TabsContent/Projects/Slider/index.less
@@ -1,10 +1,15 @@
 .home-page-content-tabs-content-projects-slider {
-    &__slider-container {
-        margin-top: 50px;
-    }
-
-    &__slide-container {
+    &__project-card-slide {
         display: flex;
         justify-content: center;
+    }
+
+    &__project-card-container {
+        max-width: 1024px;
+        width: 100%;
+    }
+
+    &__slider-container {
+        margin-top: 50px;
     }
 }
