--- a/src/main/Home/Content/TabsContent/Projects/Slider/index.less
+++ b/src/main/Home/Content/TabsContent/Projects/Slider/index.less
@@ -1,4 +1,9 @@
 .home-page-content-tabs-content-projects-slider {
+    &__navigation-container {
+        display: flex;
+        justify-content: center;
+    }
+
     &__project-card-slide {
         display: flex;
         justify-content: center;
