--- a/src/common/components/Tab/index.less
+++ b/src/common/components/Tab/index.less
@@ -7,9 +7,9 @@
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    height: 150px;
     justify-content: center;
-    width: 150px;
+    padding: 20px;
+    width: 100%;
 
     &.active {
         border-bottom-color: @blue;
