add mobile padding

--- a/src/common/components/Card/Project/Body/index.less
+++ b/src/common/components/Card/Project/Body/index.less
@@ -1,7 +1,10 @@
 @import (reference) '~styles/adaptive';
 @import (reference) '~styles/colors';
+@import (reference) '~styles/padding';
 
 .card-project-body {
+    .padding_mobile();
+
     text-align: center;
 
     &__description {
