--- a/src/main/Home/Content/TabsContent/About/index.less
+++ b/src/main/Home/Content/TabsContent/About/index.less
@@ -1,6 +1,9 @@
 @import (reference) '~styles/colors';
+@import (reference) '~styles/padding';
 
 .main-page-content-about {
+    .padding_mobile();
+
     margin-top: 50px;
 
     &__item {
