--- a/src/main/Home/Content/TabsContent/Projects/Slider/index.less
+++ b/src/main/Home/Content/TabsContent/Projects/Slider/index.less
@@ -1,5 +1,9 @@
+@import (reference) '~styles/padding';
+
 .home-page-content-tabs-content-projects-slider {
     &__navigation-container {
+        .padding_mobile();
+
         display: flex;
         justify-content: center;
     }
