--- a/src/main/Home/Header/index.less
+++ b/src/main/Home/Header/index.less
@@ -1,9 +1,11 @@
 @import (reference) '~styles/font';
+@import (reference) '~styles/padding';
 
 .home-page-header {
+    .padding_mobile();
+
     align-items: center;
     display: flex;
-    flex: 1;
     flex-direction: column;
     text-align: center;
 
