--- a/src/styles/adaptive.less
+++ b/src/styles/adaptive.less
@@ -1,4 +1,5 @@
-@desktop: ~'screen and (max-width: 1920px)';
-@laptop: ~'screen and (max-width: 1440px)';
-@tablet: ~'screen and (max-width: 1023px)';
-@mobile: ~'screen and (max-width: 767px)';
+@desktop_max: ~'screen and (max-width: 1920px)';
+@laptop_max: ~'screen and (max-width: 1440px)';
+@laptop_min: ~'screen and (min-width: 1024px)';
+@tablet_max: ~'screen and (max-width: 1023px)';
+@mobile_max: ~'screen and (max-width: 767px)';
