--- a/src/styles/font.less
+++ b/src/styles/font.less
@@ -17,7 +17,7 @@
     line-height: 72px;
     text-transform: uppercase;
 
-    @media @mobile {
+    @media @mobile_max {
         font-size: 30px;
         line-height: 36px;
     }
