--- a/src/common/components/Slider/ButtonNavigation/index.less
+++ b/src/common/components/Slider/ButtonNavigation/index.less
@@ -12,17 +12,25 @@
     padding: 20px;
     transition: 0.3s;
 
-    @media @mobile {
-        margin: 0 5px;
-        padding: 10px;
+    @media @laptop_min {
+        &:hover {
+            background-color: @blue;
+            color: @white;
+        }
     }
 
-    &:hover {
+    @media @tablet_max {
         background-color: @blue;
         color: @white;
     }
 
+    @media @mobile_max {
+        margin: 0 5px;
+        padding: 10px 20px;
+    }
+
     &.swiper-button-disabled {
+        background-color: transparent;
         color: @gray-1;
         pointer-events: none;
     }
@@ -39,6 +47,10 @@
         margin: 0 0 0 20px;
         transition: 0.3s;
         width: 25px;
+
+        @media @tablet_max {
+            color: @white;
+        }
 
         .slider-button-navigation_prev & {
             margin: 0 20px 0 0;
