--- a/src/styles/font.less
+++ b/src/styles/font.less
@@ -32,6 +32,11 @@
 .f_h4 {
     font-size: 50px;
     line-height: 56px;
+
+    @media @mobile_max {
+        font-size: 24px;
+        line-height: 32px;
+    }
 }
 
 .f_h5 {
