--- a/src/common/components/Card/Project/Header/index.less
+++ b/src/common/components/Card/Project/Header/index.less
@@ -26,6 +26,7 @@
         border-radius: 32px;
         box-shadow: @shadow;
         display: inline-block;
+        font-weight: 700;
         padding: 10px 20px;
 
         &:hover {
