--- a/src/main/Home/Content/TabsContent/About/Item/index.less
+++ b/src/main/Home/Content/TabsContent/About/Item/index.less
@@ -1,3 +1,4 @@
+@import (reference) '~styles/adaptive';
 @import (reference) '~styles/colors';
 
 .main-page-content-tabs-content-about-item {
@@ -7,6 +8,16 @@
     margin-top: 25px;
 
     &__description {
+        margin-top: 5px;
+
+        @media @tablet_max {
+            margin-top: 10px;
+        }
+
+        &:first-child {
+            margin-top: 0;
+        }
+
         &.bold {
             font-weight: 700;
         }
