fix lighthouse item styles

--- a/src/common/components/Lighthouse/Item/index.less
+++ b/src/common/components/Lighthouse/Item/index.less
@@ -2,6 +2,10 @@
 @import (reference) '~styles/colors';
 
 .lighthouse-item {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+
     &__description {
         font-weight: 700;
         margin-top: 5px;
