add bage for current project

--- a/src/common/components/Card/Project/Header/index.less
+++ b/src/common/components/Card/Project/Header/index.less
@@ -51,6 +51,10 @@
         &:hover {
             box-shadow: @shadow_hover;
         }
+
+        &.disabled {
+            pointer-events: none;
+        }
     }
 
     &__open-project-link-container {
